force-app/main/default/objects/SoftDrink__c.object
<CustomObject>
    <label>Soft Drink</label>
    <pluralLabel>Soft Drinks</pluralLabel>
    <nameField>
        <type>Text</type>
        <label>Soft Drink Name</label>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Total_Quantity__c</fullName>
        <label>Total Quantity</label>
        <type>Number</type>
        <precision>18</precision>
        <scale>2</scale>
    </fields>
    <fields>
        <fullName>Quantity_Used__c</fullName>
        <label>Quantity Used</label>
        <type>Number</type>
        <precision>18</precision>
        <scale>2</scale>
    </fields>
    <fields>
        <fullName>Quantity_Left__c</fullName>
        <label>Quantity Left</label>
        <type>Number</type>
        <precision>18</precision>
        <scale>2</scale>
    </fields>
</CustomObject>